入門06を実施した。

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AngularFour</title>
+  <!-- base要素にhref属性を設定する。 -->
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
